// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel Snapshots should render 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    alignItems="center"
    data-blade-component="base-box"
    display="flex"
    flexDirection="column"
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
        },
      ]
    }
  >
    <View
      alignItems="center"
      data-blade-component="base-box"
      display="flex"
      flexDirection="row"
      gap="spacing.4"
      position="relative"
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "gap": 12,
            "position": "relative",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RCTScrollView
        accessible={true}
        automaticallyAdjustContentInsets={false}
        contentContainerStyle={
          {
            "paddingVertical": 10,
          }
        }
        contentInset={
          {
            "left": 0,
            "right": 0,
          }
        }
        contentInsetAdjustmentBehavior="never"
        contentOffset={
          {
            "x": 0,
            "y": 0,
          }
        }
        decelerationRate="fast"
        horizontal={true}
        onLayout={[Function]}
        onMomentumScrollEnd={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        overScrollMode="never"
        showsHorizontalScrollIndicator={false}
        showsVerticalScrollIndicator={false}
        snapToAlignment="start"
        snapToInterval={0}
      >
        <View>
          <View
            data-blade-component="base-box"
            style={
              [
                {
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingLeft": 12,
                  "paddingRight": 12,
                  "width": 0,
                },
              ]
            }
            width="0px"
          >
            <View
              data-blade-component="box"
              style={
                [
                  {},
                ]
              }
            >
              <Text
                accessible={true}
                color="surface.text.gray.normal"
                data-blade-component="text"
                fontFamily="text"
                fontSize={100}
                fontStyle="normal"
                fontWeight="regular"
                lineHeight={100}
                style={
                  [
                    {
                      "color": "hsla(212, 39%, 16%, 1)",
                      "fontFamily": "Inter",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 20,
                      "marginBottom": 0,
                      "marginLeft": 0,
                      "marginRight": 0,
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "textDecorationLine": "none",
                    },
                  ]
                }
                testID="active-slide"
              >
                0
              </Text>
            </View>
          </View>
          <View
            data-blade-component="base-box"
            style={
              [
                {
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingLeft": 12,
                  "paddingRight": 12,
                  "width": 0,
                },
              ]
            }
            width="0px"
          >
            <View
              data-blade-component="box"
              style={
                [
                  {},
                ]
              }
            >
              <Text
                accessible={true}
                color="surface.text.gray.normal"
                data-blade-component="text"
                fontFamily="text"
                fontSize={100}
                fontStyle="normal"
                fontWeight="regular"
                lineHeight={100}
                style={
                  [
                    {
                      "color": "hsla(212, 39%, 16%, 1)",
                      "fontFamily": "Inter",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 20,
                      "marginBottom": 0,
                      "marginLeft": 0,
                      "marginRight": 0,
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "textDecorationLine": "none",
                    },
                  ]
                }
                testID="active-slide"
              >
                0
              </Text>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
    <View
      alignItems="center"
      data-blade-component="base-box"
      display="flex"
      flexDirection="row"
      gap="spacing.4"
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "gap": 12,
            "marginTop": 24,
          },
        ]
      }
    >
      <View
        data-blade-component="base-box"
        style={
          [
            {},
          ]
        }
      >
        <View
          accessibilityLabel="Previous Slide"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          isPressed={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "alignSelf": "center",
                "backgroundColor": "hsla(0, 0%, 100%, 1)",
                "borderColor": "hsla(0, 0%, 100%, 0)",
                "borderRadius": 9999,
                "borderStyle": "solid",
                "borderWidth": 1,
                "color": "hsla(0, 0%, 0%, 0.72)",
                "cursor": "pointer",
                "display": "flex",
                "justifyContent": "center",
                "paddingBottom": 8,
                "paddingLeft": 8,
                "paddingRight": 8,
                "paddingTop": 8,
              },
              {
                "elevation": 8,
                "shadowColor": "hsla(217, 56%, 17%, 0.4)",
                "shadowOffset": {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.2,
                "shadowRadius": 4,
              },
            ]
          }
          variant="filled"
        >
          <RNSVGSvgView
            accessibilityElementsHidden={true}
            align="xMidYMid"
            bbHeight="12px"
            bbWidth="12px"
            data-blade-component="icon"
            fill="none"
            focusable={false}
            height="12px"
            importantForAccessibility="no-hide-descendants"
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                [
                  {},
                ],
                {
                  "flex": 0,
                  "height": 12,
                  "width": 12,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width="12px"
          >
            <RNSVGGroup
              fill={null}
              propList={
                [
                  "fill",
                ]
              }
            >
              <RNSVGPath
                clipRule={0}
                d="M15.7071 5.29289C16.0976 5.68342 16.0976 6.31658 15.7071 6.70711L10.4142 12L15.7071 17.2929C16.0976 17.6834 16.0976 18.3166 15.7071 18.7071C15.3166 19.0976 14.6834 19.0976 14.2929 18.7071L8.29289 12.7071C7.90237 12.3166 7.90237 11.6834 8.29289 11.2929L14.2929 5.29289C14.6834 4.90237 15.3166 4.90237 15.7071 5.29289Z"
                fill={
                  {
                    "payload": 3087007744,
                    "type": 0,
                  }
                }
                fillRule={0}
                propList={
                  [
                    "fill",
                    "fillRule",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
      <View
        accessibilityLabel="Slides"
        accessibilityRole="tablist"
        accessible={true}
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        gap="spacing.2"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "gap": 4,
            },
          ]
        }
      >
        <View
          accessibilityLabel="Slide 1"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            accessibilityControls="22-carousel-item-0"
            accessibilityRole="tab"
            accessibilityState={
              {
                "selected": true,
              }
            }
            accessible={true}
            data-blade-component="carousel-indicator-button"
            isActive={true}
            slideIndex={0}
            style={
              [
                {},
                {
                  "backgroundColor": "hsla(211, 22%, 56%, 1)",
                  "borderColor": "black",
                  "borderRadius": 9999,
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "cursor": "pointer",
                  "height": 6,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                },
              ]
            }
            variant="gray"
          >
            <View
              style={
                {
                  "width": 18,
                }
              }
            />
          </View>
        </View>
        <View
          accessibilityLabel="Slide 2"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            accessibilityControls="22-carousel-item-1"
            accessibilityRole="tab"
            accessibilityState={
              {
                "selected": false,
              }
            }
            accessible={true}
            data-blade-component="carousel-indicator-button"
            isActive={false}
            slideIndex={1}
            style={
              [
                {},
                {
                  "backgroundColor": "hsla(211, 20%, 52%, 0.32)",
                  "borderColor": "black",
                  "borderRadius": 9999,
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "cursor": "pointer",
                  "height": 6,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                },
              ]
            }
            variant="gray"
          >
            <View
              style={
                {
                  "width": 6,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        data-blade-component="base-box"
        style={
          [
            {},
          ]
        }
      >
        <View
          accessibilityLabel="Next Slide"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          isPressed={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "alignSelf": "center",
                "backgroundColor": "hsla(0, 0%, 100%, 1)",
                "borderColor": "hsla(0, 0%, 100%, 0)",
                "borderRadius": 9999,
                "borderStyle": "solid",
                "borderWidth": 1,
                "color": "hsla(0, 0%, 0%, 0.72)",
                "cursor": "pointer",
                "display": "flex",
                "justifyContent": "center",
                "paddingBottom": 8,
                "paddingLeft": 8,
                "paddingRight": 8,
                "paddingTop": 8,
              },
              {
                "elevation": 8,
                "shadowColor": "hsla(217, 56%, 17%, 0.4)",
                "shadowOffset": {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.2,
                "shadowRadius": 4,
              },
            ]
          }
          variant="filled"
        >
          <RNSVGSvgView
            accessibilityElementsHidden={true}
            align="xMidYMid"
            bbHeight="12px"
            bbWidth="12px"
            data-blade-component="icon"
            fill="none"
            focusable={false}
            height="12px"
            importantForAccessibility="no-hide-descendants"
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                [
                  {},
                ],
                {
                  "flex": 0,
                  "height": 12,
                  "width": 12,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width="12px"
          >
            <RNSVGGroup
              fill={null}
              propList={
                [
                  "fill",
                ]
              }
            >
              <RNSVGPath
                clipRule={0}
                d="M8.29289 5.29289C8.68342 4.90237 9.31658 4.90237 9.70711 5.29289L15.7071 11.2929C16.0976 11.6834 16.0976 12.3166 15.7071 12.7071L9.70711 18.7071C9.31658 19.0976 8.68342 19.0976 8.29289 18.7071C7.90237 18.3166 7.90237 17.6834 8.29289 17.2929L13.5858 12L8.29289 6.70711C7.90237 6.31658 7.90237 5.68342 8.29289 5.29289Z"
                fill={
                  {
                    "payload": 3087007744,
                    "type": 0,
                  }
                }
                fillRule={0}
                propList={
                  [
                    "fill",
                    "fillRule",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Carousel Snapshots should render with visibleItems but always renders 1 item only 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    alignItems="center"
    data-blade-component="base-box"
    display="flex"
    flexDirection="column"
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
        },
      ]
    }
  >
    <View
      alignItems="center"
      data-blade-component="base-box"
      display="flex"
      flexDirection="row"
      gap="spacing.4"
      position="relative"
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "gap": 12,
            "position": "relative",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RCTScrollView
        accessible={true}
        automaticallyAdjustContentInsets={false}
        contentContainerStyle={
          {
            "paddingVertical": 10,
          }
        }
        contentInset={
          {
            "left": 0,
            "right": 0,
          }
        }
        contentInsetAdjustmentBehavior="never"
        contentOffset={
          {
            "x": 0,
            "y": 0,
          }
        }
        decelerationRate="fast"
        horizontal={true}
        onLayout={[Function]}
        onMomentumScrollEnd={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        overScrollMode="never"
        showsHorizontalScrollIndicator={false}
        showsVerticalScrollIndicator={false}
        snapToAlignment="start"
        snapToInterval={0}
      >
        <View>
          <View
            data-blade-component="base-box"
            style={
              [
                {
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingLeft": 12,
                  "paddingRight": 12,
                  "width": 0,
                },
              ]
            }
            width="0px"
          >
            <View
              data-blade-component="box"
              style={
                [
                  {},
                ]
              }
            >
              <Text
                accessible={true}
                color="surface.text.gray.normal"
                data-blade-component="text"
                fontFamily="text"
                fontSize={100}
                fontStyle="normal"
                fontWeight="regular"
                lineHeight={100}
                style={
                  [
                    {
                      "color": "hsla(212, 39%, 16%, 1)",
                      "fontFamily": "Inter",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 20,
                      "marginBottom": 0,
                      "marginLeft": 0,
                      "marginRight": 0,
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "textDecorationLine": "none",
                    },
                  ]
                }
                testID="active-slide"
              >
                0
              </Text>
            </View>
          </View>
          <View
            data-blade-component="base-box"
            style={
              [
                {
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingLeft": 12,
                  "paddingRight": 12,
                  "width": 0,
                },
              ]
            }
            width="0px"
          >
            <View
              data-blade-component="box"
              style={
                [
                  {},
                ]
              }
            >
              <Text
                accessible={true}
                color="surface.text.gray.normal"
                data-blade-component="text"
                fontFamily="text"
                fontSize={100}
                fontStyle="normal"
                fontWeight="regular"
                lineHeight={100}
                style={
                  [
                    {
                      "color": "hsla(212, 39%, 16%, 1)",
                      "fontFamily": "Inter",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 20,
                      "marginBottom": 0,
                      "marginLeft": 0,
                      "marginRight": 0,
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "textDecorationLine": "none",
                    },
                  ]
                }
                testID="active-slide"
              >
                0
              </Text>
            </View>
          </View>
          <View
            data-blade-component="base-box"
            style={
              [
                {
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingLeft": 12,
                  "paddingRight": 12,
                  "width": 0,
                },
              ]
            }
            width="0px"
          >
            <View
              data-blade-component="box"
              style={
                [
                  {},
                ]
              }
            >
              <Text
                accessible={true}
                color="surface.text.gray.normal"
                data-blade-component="text"
                fontFamily="text"
                fontSize={100}
                fontStyle="normal"
                fontWeight="regular"
                lineHeight={100}
                style={
                  [
                    {
                      "color": "hsla(212, 39%, 16%, 1)",
                      "fontFamily": "Inter",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 20,
                      "marginBottom": 0,
                      "marginLeft": 0,
                      "marginRight": 0,
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "textDecorationLine": "none",
                    },
                  ]
                }
                testID="active-slide"
              >
                0
              </Text>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
    <View
      alignItems="center"
      data-blade-component="base-box"
      display="flex"
      flexDirection="row"
      gap="spacing.4"
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "gap": 12,
            "marginTop": 24,
          },
        ]
      }
    >
      <View
        data-blade-component="base-box"
        style={
          [
            {},
          ]
        }
      >
        <View
          accessibilityLabel="Previous Slide"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          isPressed={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "alignSelf": "center",
                "backgroundColor": "hsla(0, 0%, 100%, 1)",
                "borderColor": "hsla(0, 0%, 100%, 0)",
                "borderRadius": 9999,
                "borderStyle": "solid",
                "borderWidth": 1,
                "color": "hsla(0, 0%, 0%, 0.72)",
                "cursor": "pointer",
                "display": "flex",
                "justifyContent": "center",
                "paddingBottom": 8,
                "paddingLeft": 8,
                "paddingRight": 8,
                "paddingTop": 8,
              },
              {
                "elevation": 8,
                "shadowColor": "hsla(217, 56%, 17%, 0.4)",
                "shadowOffset": {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.2,
                "shadowRadius": 4,
              },
            ]
          }
          variant="filled"
        >
          <RNSVGSvgView
            accessibilityElementsHidden={true}
            align="xMidYMid"
            bbHeight="12px"
            bbWidth="12px"
            data-blade-component="icon"
            fill="none"
            focusable={false}
            height="12px"
            importantForAccessibility="no-hide-descendants"
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                [
                  {},
                ],
                {
                  "flex": 0,
                  "height": 12,
                  "width": 12,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width="12px"
          >
            <RNSVGGroup
              fill={null}
              propList={
                [
                  "fill",
                ]
              }
            >
              <RNSVGPath
                clipRule={0}
                d="M15.7071 5.29289C16.0976 5.68342 16.0976 6.31658 15.7071 6.70711L10.4142 12L15.7071 17.2929C16.0976 17.6834 16.0976 18.3166 15.7071 18.7071C15.3166 19.0976 14.6834 19.0976 14.2929 18.7071L8.29289 12.7071C7.90237 12.3166 7.90237 11.6834 8.29289 11.2929L14.2929 5.29289C14.6834 4.90237 15.3166 4.90237 15.7071 5.29289Z"
                fill={
                  {
                    "payload": 3087007744,
                    "type": 0,
                  }
                }
                fillRule={0}
                propList={
                  [
                    "fill",
                    "fillRule",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
      <View
        accessibilityLabel="Slides"
        accessibilityRole="tablist"
        accessible={true}
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        gap="spacing.2"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "gap": 4,
            },
          ]
        }
      >
        <View
          accessibilityLabel="Slide 1"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            accessibilityControls="23-carousel-item-0"
            accessibilityRole="tab"
            accessibilityState={
              {
                "selected": true,
              }
            }
            accessible={true}
            data-blade-component="carousel-indicator-button"
            isActive={true}
            slideIndex={0}
            style={
              [
                {},
                {
                  "backgroundColor": "hsla(211, 22%, 56%, 1)",
                  "borderColor": "black",
                  "borderRadius": 9999,
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "cursor": "pointer",
                  "height": 6,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                },
              ]
            }
            variant="gray"
          >
            <View
              style={
                {
                  "width": 18,
                }
              }
            />
          </View>
        </View>
        <View
          accessibilityLabel="Slide 2"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            accessibilityControls="23-carousel-item-1"
            accessibilityRole="tab"
            accessibilityState={
              {
                "selected": false,
              }
            }
            accessible={true}
            data-blade-component="carousel-indicator-button"
            isActive={false}
            slideIndex={1}
            style={
              [
                {},
                {
                  "backgroundColor": "hsla(211, 20%, 52%, 0.32)",
                  "borderColor": "black",
                  "borderRadius": 9999,
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "cursor": "pointer",
                  "height": 6,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                },
              ]
            }
            variant="gray"
          >
            <View
              style={
                {
                  "width": 6,
                }
              }
            />
          </View>
        </View>
        <View
          accessibilityLabel="Slide 3"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            accessibilityControls="23-carousel-item-2"
            accessibilityRole="tab"
            accessibilityState={
              {
                "selected": false,
              }
            }
            accessible={true}
            data-blade-component="carousel-indicator-button"
            isActive={false}
            slideIndex={2}
            style={
              [
                {},
                {
                  "backgroundColor": "hsla(211, 20%, 52%, 0.32)",
                  "borderColor": "black",
                  "borderRadius": 9999,
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "cursor": "pointer",
                  "height": 6,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                },
              ]
            }
            variant="gray"
          >
            <View
              style={
                {
                  "width": 6,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        data-blade-component="base-box"
        style={
          [
            {},
          ]
        }
      >
        <View
          accessibilityLabel="Next Slide"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          isPressed={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "alignSelf": "center",
                "backgroundColor": "hsla(0, 0%, 100%, 1)",
                "borderColor": "hsla(0, 0%, 100%, 0)",
                "borderRadius": 9999,
                "borderStyle": "solid",
                "borderWidth": 1,
                "color": "hsla(0, 0%, 0%, 0.72)",
                "cursor": "pointer",
                "display": "flex",
                "justifyContent": "center",
                "paddingBottom": 8,
                "paddingLeft": 8,
                "paddingRight": 8,
                "paddingTop": 8,
              },
              {
                "elevation": 8,
                "shadowColor": "hsla(217, 56%, 17%, 0.4)",
                "shadowOffset": {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.2,
                "shadowRadius": 4,
              },
            ]
          }
          variant="filled"
        >
          <RNSVGSvgView
            accessibilityElementsHidden={true}
            align="xMidYMid"
            bbHeight="12px"
            bbWidth="12px"
            data-blade-component="icon"
            fill="none"
            focusable={false}
            height="12px"
            importantForAccessibility="no-hide-descendants"
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                [
                  {},
                ],
                {
                  "flex": 0,
                  "height": 12,
                  "width": 12,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width="12px"
          >
            <RNSVGGroup
              fill={null}
              propList={
                [
                  "fill",
                ]
              }
            >
              <RNSVGPath
                clipRule={0}
                d="M8.29289 5.29289C8.68342 4.90237 9.31658 4.90237 9.70711 5.29289L15.7071 11.2929C16.0976 11.6834 16.0976 12.3166 15.7071 12.7071L9.70711 18.7071C9.31658 19.0976 8.68342 19.0976 8.29289 18.7071C7.90237 18.3166 7.90237 17.6834 8.29289 17.2929L13.5858 12L8.29289 6.70711C7.90237 6.31658 7.90237 5.68342 8.29289 5.29289Z"
                fill={
                  {
                    "payload": 3087007744,
                    "type": 0,
                  }
                }
                fillRule={0}
                propList={
                  [
                    "fill",
                    "fillRule",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
  </View>
</View>
`;
